Fixed width overflowing issue

--- a/kdp-frontend/src/styles/RockstarInformationPage/RockstarView.scss
+++ b/kdp-frontend/src/styles/RockstarInformationPage/RockstarView.scss
@@ -1,8 +1,9 @@
 ﻿@import "@/styles/variables.scss";
 
 .rockstar-pane {
-  width: 100vw;
+  width: 100%;
   height: 12em;
+  background-color: $trit-yellow;
 }
 
 .rockstar-card {
